# codas

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRACT.md  LICENSE  README.md  codas-architecture.html  pyproject.toml  setup.py
.claude/: settings.json
.codas/: claims.yml  config.yml  documents.yml  policies.yml  program.yml  structure.yml  waivers.yml
.codas/wiki/: index.md
.codas/wiki/code/: codas-adapters.md  codas-app.md  codas-config-loader.md  codas-core-models.md  codas-facts.md  codas-policies.md  codas-reporting.md  codas-source.md  codas-structure-module.md  openworld.md  role-integrations.md
.codas/wiki/concepts/: codas-product.md  repository-structure.md  trellis-task-system.md
.github/workflows/: codas.yml
.trellis/: .template-hashes.json  config.yaml
docs/: codas-architecture-decisions.md  codas-concept-map.html  codas-design.html  codas-fact-claim-maintenance-milestone.md  codas-implementation-plan.html  codas-structure-map-schema.html  codas-system-diagram.html
scripts/: codas
src/codas/: __init__.py  cli.py
tests/: _repo.py  test_adapters.py  test_artifact_index.py  test_atlas_pack.py  test_book.py  test_call_facts.py  test_codas_check.py  test_code_anchor.py  test_codegraph.py  test_codex.py  test_dependency_direction_policy.py  test_deprecated_path_policy.py  test_doctor.py  test_document_loader.py  test_duplicate_implementation_policy.py  test_duplicate_symbol_policy.py  test_enforcement.py  test_fact_coupling.py  test_fact_delta_substrate.py  test_fact_soundness.py  test_generated_sections.py  test_generated_wiki_drift.py  test_html_claims.py  test_impact.py  test_init.py  test_injection.py  test_inventory.py  test_knowledge_tree.py  test_missing_owner_policy.py  test_openworld.py  test_paradigm.py  test_policy_registry.py  test_preflight.py  test_product_scope.py  test_program_loader.py  test_provenance.py  test_python_adapter.py  test_python_import_facts.py  test_query.py  test_receipt.py  (+17 more)
tests/acceptance/: test_golden.py
wiki/: codas-adapters.md  codas-app.md  codas-config-loader.md  codas-core-models.md  codas-facts.md  codas-policies.md  codas-reporting.md  codas-source.md  codas-structure-module.md  index.md  role-integrations.md
(+438 files in other folders)
