[project]
name = "codas"
version = "0.1.0"
description = "Code Atlas System for coding-agent-maintained repositories."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "oydodo" }]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
codas = "codas.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Built-in paradigm presets are curated YAML data loaded at runtime; ship them in the wheel
# (setuptools>=68 includes a package's subdirectory data globs without needing an __init__.py).
codas = ["presets/*.yml"]
