[project]
name = "codas"
version = "0.1.0"
description = "Code Atlas System for coding-agent-maintained repositories."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "oydodo" }]
dependencies = ["pyyaml>=6.0"]
keywords = ["agents", "architecture", "governance", "repository", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
swift = ["tree-sitter>=0.24", "tree-sitter-swift~=0.7"]

[project.scripts]
codas = "codas.__main__:main"

[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Built-in paradigm presets are curated YAML data loaded at runtime; ship them in the wheel.
codas = ["presets/*.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
